--- a/02-design-handoff/index.html
+++ b/02-design-handoff/index.html
@@ -15,29 +15,29 @@
   </head>
 
   <body>
-    <ul class="list-architecture">
-      <li class="item">
+    <ul class="list">
+      <li class="list_item">
         <img
-          src="/02-design-handoff/src/assets/building_design.png"
+          src="/02-design-handoff/src/assets/history_of_architecture.png"
           alt="건축의 역사"
         >
         <p>History of Architecture</p>
       </li>
-      <li class="item">
+      <li class="list_item">
         <img
           src="/02-design-handoff/src/assets/building_design.png"
           alt="빌딩 디자인"
         >
         <p>Building design</p>
       </li>
-      <li class="item">
+      <li class="list_item">
         <img
           src="/02-design-handoff/src/assets/graphics.png"
           alt="그래픽"
         >
         <p>Graphics</p>
       </li>
-      <li class="item">
+      <li class="list_item">
         <img
           src="/02-design-handoff/src/assets/climatology.png"
           alt="기후학"
