--- a/03-ecmascript-for-react/index.html
+++ b/03-ecmascript-for-react/index.html
@@ -13,6 +13,14 @@
       type="image/svg+xml"
       href="/ecmascript.svg"
     />
+    <script
+      type="module"
+      src="src/01-ecmascript/10-class.js"
+    ></script>
+    <script
+      type="module"
+      src="src/01-ecmascript/11-es-modules.js"
+    ></script>
   </head>
 
   <body>
