--- a/02-design-handoff/index.html
+++ b/02-design-handoff/index.html
@@ -109,6 +109,96 @@
           /></button>
       </li>
     </ul>
+
+    <!-- <sortable-list>
+      <li class="list_item">
+        <img
+          data-role="image"
+          src="src/assets/architectures/architecture-01.jpg"
+          alt=""
+          width="64"
+          height="64"
+        />
+        <span data-role="label">Building design</span>
+        <button
+          type="button"
+          data-role="handle"
+          title="move item (using arrow up/down key)"
+        >
+          <img
+            src="src/assets/icons/hamburger.svg"
+            alt="move item (using arrow up/down key)"
+            width="20"
+            height="20"
+          />
+        </button>
+      </li>
+      <li class="list_item">
+        <img
+          data-role="image"
+          src="src/assets/architectures/architecture-02.jpg"
+          alt=""
+          width="64"
+          height="64"
+        />
+        <span data-role="label">Graphics</span>
+        <button
+          type="button"
+          data-role="handle"
+          title="move item (using arrow up/down key)"
+        >
+          <img
+            src="src/assets/icons/hamburger.svg"
+            alt="move item (using arrow up/down key)"
+            width="20"
+            height="20"
+          />
+        </button>
+      </li>
+      <li class="list_item">
+        <img
+          data-role="image"
+          src="src/assets/architectures/architecture-03.jpg"
+          alt=""
+          width="64"
+          height="64"
+        />
+        <span data-role="label">History of Architecture</span>
+        <button
+          type="button"
+          data-role="handle"
+          title="move item (using arrow up/down key)"
+        ><img
+            src="src/assets/icons/hamburger.svg"
+            alt="move item (using arrow up/down key)"
+            width="20"
+            height="20"
+          /></button>
+      </li>
+      <li class="list_item">
+        <img
+          data-role="image"
+          src="src/assets/architectures/architecture-04.jpg"
+          alt=""
+          width="64"
+          height="64"
+        />
+        <span data-role="label">Climatology</span>
+        <button
+          type="button"
+          data-role="handle"
+          title="move item (using arrow up/down key)"
+        >
+          <img
+            src="src/assets/icons/hamburger.svg"
+            alt="move item (using arrow up/down key)"
+            width="20"
+            height="20"
+          />
+        </button>
+      </li>
+    </sortable-list> -->
+
   </body>
 
 </html>
